--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,6 +76,10 @@
                     data-1800 = "transform: translate(-50%, 100%); opacity: 1;"
                     data-4500 = "transform: translate(-50%, 650%); opacity: 1;"
                 ></div>
+
+                <div class="about_txt">
+                    <p>We provide visual<br>coding solutions for you webs</p>
+                </div>
             </div>
         </div>
     </article>
