--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -117,6 +117,7 @@
                 $(".glasses_bg").removeClass("stop");
                 $(".glasses_bg").addClass("recoil");
             } else {
+                $(".glasses_bg").removeClass("stop");
                 $(".glasses_bg").addClass("top");
                 $(".glasses_bg").addClass("recoil");
             }
