--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
                 <div class="glasses_bg"
                     data-1300 = "transform: translate(-50%, 0%); opacity: 0;"
                     data-1800 = "transform: translate(-50%, 100%); opacity: 1;"
-                    data-4500 = "transform: translate(-50%, 650%); opacity: 1;"
+                    data-4500 = "transform: translate(-50%, 650%); opacity: 0;"
                 ></div>
 
                 <div class="about_txt">
@@ -104,6 +104,7 @@
                     <div class="career_img">
                         <img src="assets/img/my_career01.png" alt="이미지01">
                         <img src="assets/img/my_career02.png" alt="이미지02">
+                        <img src="assets/img/my_career03.png" alt="이미지03">
                     </div>
                     <div class="work">
                         <ul>
@@ -111,15 +112,15 @@
                             <li>30</li>
                         </ul>
                         <div class="work_br">
-                            <div class="work_drag">23</div>
+                            <div class="work_drag"><span>23</span></div>
                         </div>
                     </div>
                     <div class="career">
                         <p>let me introduce my career</p>
                         <ul>
-                            <li>2011~2012<br><span>청강문화산업대학 디자인과 졸업</span></li>
-                            <li>2013~2019<br><span>디자인 직종에서 디자이너로 활동</span></li>
-                            <li>2021.07~2021.12<br><span>UI/UX 웹퍼블리셔 과정 수강</span></li>
+                            <li>• 2011~2012<br><span>청강문화산업대학 디자인과 졸업</span></li>
+                            <li>• 2013~2019<br><span>디자인 분야에서 디자이너로 활동</span></li>
+                            <li>• 2021.07~2021.12<br><span>학원 웹퍼블리셔 과정 수강</span></li>
                         </ul>
                     </div>
                 </div>
@@ -127,6 +128,12 @@
         </div>
     </article>
     <!--//about-->
+
+    <article>
+        <div class="about_story">
+            <h2>ABOUT STORY</h2>
+        </div>
+    </article>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
