--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,54 +75,52 @@
     <!--//main-->
 
     <article>
-        <div class="container">
-            <div class="about">
-                <div class="glasses_bg"
-                    data-1300 = "transform: translate(-50%, 0%); opacity: 0;"
-                    data-1800 = "transform: translate(-50%, 100%); opacity: 1;"
-                    data-4500 = "transform: translate(-50%, 650%); opacity: 0;"
-                ></div>
+        <div class="about">
+            <div class="glasses_bg"
+                data-1300 = "transform: translate(-50%, 0%); opacity: 0;"
+                data-1800 = "transform: translate(-50%, 100%); opacity: 1;"
+                data-4500 = "transform: translate(-50%, 650%); opacity: 0;"
+            ></div>
 
-                <div class="about_txt">
-                    <p>We provide visual<br>coding solutions for you webs</p>
-                </div>
+            <div class="about_txt">
+                <p>We provide visual<br>coding solutions for you webs</p>
+            </div>
 
-                <div class="swiper-slide">
-                    <div class="study">
-                        <div class="slider-inner">
-                            <div class="slider" data-name="이미지1"><img src="assets/img/study01.jpg" alt="이미지1"></div>
-                            <div class="slider" data-name="이미지2"><img src="assets/img/study02.jpg" alt="이미지2"></div>
-                            <div class="slider" data-name="이미지3"><img src="assets/img/study03.jpg" alt="이미지3"></div>
-                            <div class="slider" data-name="이미지4"><img src="assets/img/study04.jpg" alt="이미지4"></div>
-                            <div class="slider" data-name="이미지5"><img src="assets/img/study05.jpg" alt="이미지5"></div>
-                        </div>
+            <div class="swiper-slide">
+                <div class="study">
+                    <div class="slider-inner">
+                        <div class="slider" data-name="이미지1"><img src="assets/img/study01.jpg" alt="이미지1"></div>
+                        <div class="slider" data-name="이미지2"><img src="assets/img/study02.jpg" alt="이미지2"></div>
+                        <div class="slider" data-name="이미지3"><img src="assets/img/study03.jpg" alt="이미지3"></div>
+                        <div class="slider" data-name="이미지4"><img src="assets/img/study04.jpg" alt="이미지4"></div>
+                        <div class="slider" data-name="이미지5"><img src="assets/img/study05.jpg" alt="이미지5"></div>
                     </div>
                 </div>
-                <div class="my_career">
-                    <h3>Hello, do you want to know me?</h3>
-                    <p>I used to be a designer and now I'm going to be a web publisher</p>
-                    <div class="career_img">
-                        <img src="assets/img/my_career01.png" alt="이미지01">
-                        <img src="assets/img/my_career02.png" alt="이미지02">
-                        <img src="assets/img/my_career03.png" alt="이미지03">
+            </div>
+            <div class="my_career">
+                <h3>Hello, do you want to know me?</h3>
+                <p>I used to be a designer and now I'm going to be a web publisher</p>
+                <div class="career_img">
+                    <img src="assets/img/my_career01.png" alt="이미지01">
+                    <img src="assets/img/my_career02.png" alt="이미지02">
+                    <img src="assets/img/my_career03.png" alt="이미지03">
+                </div>
+                <div class="work">
+                    <ul>
+                        <li>20</li>
+                        <li>30</li>
+                    </ul>
+                    <div class="work_br">
+                        <div class="work_drag"><span>23</span></div>
                     </div>
-                    <div class="work">
-                        <ul>
-                            <li>20</li>
-                            <li>30</li>
-                        </ul>
-                        <div class="work_br">
-                            <div class="work_drag"><span>23</span></div>
-                        </div>
-                    </div>
-                    <div class="career">
-                        <p>let me introduce my career</p>
-                        <ul>
-                            <li>• 2011~2012<br><span>청강문화산업대학 디자인과 졸업</span></li>
-                            <li>• 2013~2019<br><span>디자인 분야에서 디자이너로 활동</span></li>
-                            <li>• 2021.07~2021.12<br><span>학원 웹퍼블리셔 과정 수강</span></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="career">
+                    <p>let me introduce my career</p>
+                    <ul>
+                        <li>• 2011~2012<br><span>청강문화산업대학 디자인과 졸업</span></li>
+                        <li>• 2013~2019<br><span>디자인 분야에서 디자이너로 활동</span></li>
+                        <li>• 2021.07~2021.12<br><span>학원 웹퍼블리셔 과정 수강</span></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -131,6 +129,9 @@
 
     <article>
         <div class="about_story">
+            <div class="story_img">
+                <img src="assets/img/abgss_gg.png" alt="">
+            </div>
             <h2>ABOUT STORY</h2>
         </div>
     </article>
