--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,9 +130,15 @@
     <article>
         <div class="about_story">
             <div class="story_img">
-                <img src="assets/img/abgss_gg.png" alt="">
+                <img src="assets/img/abgss_gg.png" alt="안경">
             </div>
             <h2>ABOUT STORY</h2>
+            <div class="story_text">
+            <p>Due to the sudden corona virus, our world was a mess like a hazy fog</p>
+            <span>I thought a lot about my job and decided to do what I loved the most. It's about creating something new and decorating it
+                <br>I wanted to get out of my current stop, and I chose a difficult but new path.
+            </span>
+            </div>
         </div>
     </article>
 
