--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -129,16 +129,190 @@
 
     <article>
         <div class="about_story">
-            <div class="story_img">
-                <img src="assets/img/abgss_gg.png" alt="안경">
-            </div>
-            <h2>ABOUT STORY</h2>
             <div class="story_text">
-            <p>Due to the sudden corona virus, our world was a mess like a hazy fog</p>
-            <span>I thought a lot about my job and decided to do what I loved the most. It's about creating something new and decorating it
-                <br>I wanted to get out of my current stop, and I chose a difficult but new path.
-            </span>
+                <p>My page My Own space</p>
+                <span>Unknown flowers blooming momentarily in a wide field, furniture and interiors that contain a person's life
+                    <br>I love things that are newly born, things that contain someone's precious heart</span>
             </div>
+        </div>
+        <div class="container">
+            <div class="personalitys">
+                <div class="pers_box"
+                    data-4500 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-5500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-8000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-8500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-9000 = "position: relative; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:0;"
+                >
+                    <div class="txt left">
+                    <h2
+                        data-6000 = "transform: translate(0%, 0%);"
+                        data-8000 = "transform: translate(-300%, 0%);"
+                    >INTROVERT</h2>
+                    <h2
+                        data-5000 = "transform: translate(-300%, 0%);"
+                        data-7900 = "transform: translate(0%, 0%);"
+                    >CURIOUS</h2>
+                    </div>
+                    <div class="pers_img">
+                        <div class="img_box">
+                            <img src="assets/img/me_ca.png" alt="의자">
+                            <img src="assets/img/me_na.png" alt="나">
+                            <img src="assets/img/me_sk.png" alt="커피">
+                            <img src="assets/img/me_tb.png" alt="테이블">
+                        </div>
+                    </div>
+                    <div class="txt right">
+                    <h2
+                        data-6000 = "transform: translate(0%, 0%);"
+                        data-8000 = "transform: translate(300%, 0%);"
+                    >PERSONALITY</h2>
+                    <h2
+                        data-5000 = "transform: translate(300%, 0%);"
+                        data-7900 = "transform: translate(0%, 0%);"
+                    >SCRUPULOUS</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <article>
+        <div class="container">
+            <div class="skill_box">
+                <img src="assets/img/skill_img.png" alt="스킬 이미지">
+            </div>
+        </div>
+    </article>
+
+    <article>
+        <div class="projects">
+            <div class="container">
+                <div class="proTXT">
+                    <svg viewbox="0 0 100 20">
+                        <defs>
+                        <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+                            <stop offset="5%" stop-color="#7D9BB6"/>
+                            <stop offset="95%" stop-color="#123752"/>
+                        </linearGradient>
+                        <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+                            <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+                            <animateTransform
+                                attributeName="transform"
+                                begin="0s"
+                                dur="3s"
+                                type="translate"
+                                from="0,0"
+                                to="40,0"
+                                repeatCount="indefinite" />
+                            </path>
+                        </pattern>
+                        </defs>
+                        <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">PROJECT</text>
+                        <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.1">PROJECT</text>
+                    </svg>
+                </div>
+                <p>Creating various types of websites that comply with web standards</p>
+                <span>A website creation project that considers responsiveness<br>that can respond
+                    to mobile by writing code using various functions</span>
+            </div>
+        </div>
+    </article>
+
+    <article>
+        <div class="project_frame">
+            <div class="code_view">
+                <img src="assets/img/site_naver.jpg" alt="프로젝트1">
+            </div>
+            <div class="site_view">
+                <img src="assets/img/project01.jpg" alt="프로젝트1">
+            </div>
+            <div class="site_box left">
+                <h2>NAVER<br>CLOVA SITE</h2>
+                <p>기존에 존재하는 사이트를 참고하여 레이아웃 구성을 어떻게
+                    구성하고 기본 틀을<br>잡을지를 익히기 위해 연습한 제 첫번째
+                    작업물 네이버 클로바사이트입니다.
+                </p>
+                <button class="site_bt"><a href="https://heoar.github.io/dothome21/site/testType03.html" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+            </div>
+        </div>
+        <div class="project_frame">
+            <div class="code_view">
+                <img src="assets/img/site_mega.jpg" alt="프로젝트2">
+            </div>
+            <div class="site_view">
+                <img src="assets/img/project02.jpg" alt="프로젝트2">
+            </div>
+            <div class="site_box right">
+                <h2>WEB STANDARDS<br>MEGABOX</h2>
+                <p>메뉴,슬라이드 등의 기능이 구현된 메가박스 사이트입니다<br>
+                    사용자 디바이스 환경에 따라 모바일까지 호환될 수 있도록<br>
+                    레이아웃 재구성 및 웹표준을 준수한 반응형 홈페이지입니다.
+                </p>
+                <button class="site_bt"><a href="https://heoar.github.io/dothome21/mega/index.html" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+            </div>
+        </div>
+        <div class="project_frame">
+            <div class="code_view">
+                <img src="assets/img/site_pro.jpg" alt="프로젝트3">
+            </div>
+            <div class="site_view">
+                <img src="assets/img/project03.jpg" alt="프로젝트3">
+            </div>
+            <div class="site_box left">
+                <h2>team project</h2>
+                <p>각 팀별로 주제를 정하여 페이지를 구상하고 PHP를 이용한<br>
+                    로그인과 게시판 등 각 주제에 맞게 역할을 나누어 홈페이지<br>
+                    완성을 목표로 진행한 정보처리기사 시험 커뮤니티 사이트<br>
+                    ‘정신머리’입니다.
+                </p>
+                <button class="site_bt"><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">SITE <span>View &#8641</span></a></button>
+                <button class="code_bt"><a>CODE <span>View &#8641</span></a></button>
+            </div>
+        </div>
+    </article>
+
+    <article>
+        <div class="effects">
+            <div class="effect_box">
+                <h2>EFFECT</h2>
+                <p>A collection of effects using JavaScript and jQuery</p>
+                <span>Implemented menus and slide texts using effects to be utilized on the site</span>
+            </div>
+            <div class="effect_frame">
+                <img class="bgst" src="assets/img/bgst.png" alt="별자리"
+                    data-18000 = "height: 0px; object-fit: cover;"
+                    data-21000 = "height: 3000px; object-fit: cover;"
+                >
+                <div class="frame left">
+                    <iframe src="../refer-effect/mouseEffect/index.html" frameborder="0"></iframe>
+                    <img src="assets/img/frame_bar2.png" alt="하단바">
+                    <p>• 마우스 커서를 따라 다양한 효과를 적용하는 이펙트입니다</p>
+                </div>
+                <div class="frame right">
+                    <iframe src="../refer-effect/sliderEffect/index.html" frameborder="0"></iframe>
+                    <img src="assets/img/frame_bar3.png" alt="하단바">
+                    <p>• 여러장의 이미지가 정해진 순서와 방향으로 넘어가는 슬라이드 이펙트입니다</p>
+                </div>
+                <div class="frame left">
+                    <iframe src="../refer-effect/parallexEffect/index.html" frameborder="0"></iframe>
+                    <img src="assets/img/frame_bar4.png" alt="하단바">
+                    <p>• 시간차를 두어 스크롤할때마다 해당 요소에 조금씩 변화를 주는 이펙트입니다</p>
+                </div>
+                <div class="frame right">
+                    <iframe src="../refer-effect/gameEffect/index.html" frameborder="0"></iframe>
+                    <img src="assets/img/frame_bar5.png" alt="하단바">
+                    <p>• 스크립트를 이용한 간단한 게임 만들기 이펙트입니다</p>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <article>
+        <div class="anima_box">
+            <h2>ANIMATION</h2>
         </div>
     </article>
 
@@ -148,69 +322,8 @@
     <script src="assets/js/custom.js"></script>
     <script>
         var s = skrollr.init();
-
-        // const sliderWrap = $(".swiper-slide");
-        // const sliderImg = $(".study");
-        // const sliderInner = $(".slider-inner");
-        // const slider = $(".slider");
-        // let sliderDuration = 600;
-
-        // let currentIndex = 0;
-        // let sliderCount = slider.length;
-        // let sliderWidth = slider.width();
-        // let sliderEasing = "easeOutExpo";
-
-        // setInterval(function(){
-        //     ( currentIndex < sliderCount -1 ) ? currentIndex++ : currentIndex = 0
-
-        //     let sliderPosition = currentIndex * -sliderWidth;
-        //     sliderInner.animate({left: sliderPosition}, sliderDuration, sliderEasing);
-        // }, 3000);
-
-        let slider = document.querySelector(".study");
-        let innerSlider = document.querySelector(".slider-inner");
-        let pressed = false;
-        let startx;
-        let x;
-
-        slider.addEventListener("mousedown", e => {
-        pressed = true
-        startx = e.offsetX - innerSlider.offsetLeft
-        slider.style.cursor = "grabbing"
-        })
-
-        slider.addEventListener("mouseenter", () => {
-        slider.style.cursor = "grab"
-        })
-
-        slider.addEventListener("mouseup", () => {
-        slider.style.cursor = "grab"
-        })
-
-        window.addEventListener("mouseup", () => {
-        pressed = false
-        })
-
-        slider.addEventListener("mousemove", e => {
-        if (!pressed) return
-        e.preventDefault()
-        x = e.offsetX
-
-        innerSlider.style.left = `${x - startx}px`
-        checkboundary()
-        })
-
-        function checkboundary() {
-        let outer = slider.getBoundingClientRect()
-        let inner = innerSlider.getBoundingClientRect()
-
-        if (parseInt(innerSlider.style.left) > 0) {
-            innerSlider.style.left = "0px"
-        } else if (inner.right < outer.right) {
-            innerSlider.style.left = `-${inner.width - outer.width}px`
-        }
-        }
-
+       
+        
     </script>
 </body>
 </html>
