--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,8 +138,8 @@
         <div class="container">
             <div class="personalitys">
                 <div class="pers_box"
-                    data-4500 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
-                    data-5500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-5500 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-6000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
                     data-8000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
                     data-8500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
                     data-9000 = "position: relative; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:0;"
@@ -283,7 +283,7 @@
             </div>
             <div class="effect_frame">
                 <img class="bgst" src="assets/img/bgst.png" alt="별자리"
-                    data-18000 = "height: 0px; object-fit: cover;"
+                    data-18500 = "height: 0px; object-fit: cover;"
                     data-21000 = "height: 3000px; object-fit: cover;"
                 >
                 <div class="frame left">
@@ -311,10 +311,98 @@
     </article>
 
     <article>
-        <div class="anima_box">
-            <h2>ANIMATION</h2>
+        <div class="animas">
+            <div class="anima_box">
+                <h2>ANIMATION</h2>
+            </div>
+            <div class="container">
+                <div class="anima_frame">
+                    <p>Creating various animation effects using a code pen<br>
+                        click on a circle around it to show its animation</p>
+                    <div class="anima_show">
+                        <div class="show_center show1">
+                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="wveLWKx" data-user="heoar" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
+                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                        </div>
+                        <div class="show_center show2">
+                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGxo" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
+                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                        </div>
+                        <div class="show_center show3">
+                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="abwbGyM" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
+                            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                        </div>
+                        <div class="show_center show3">
+                            <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="ZEyQjog" data-user="heoar" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"></p>
+                              <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                        </div>
+                        <div class="show_left">
+                            <div class="left_bt view1"></div>
+                            <div class="left_bt view2"></div>
+                            <div class="left_bt view3"></div>
+                        </div>
+                        <div class="show_right">
+                            <div class="right_bt view1"></div>
+                            <div class="right_bt view2"></div>
+                            <div class="right_bt view3"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </article>
+    
+    <footer>
+        <div class="references">
+            <h2>Reference</h2>
+            <div class="container">
+                <div class="refer_box">
+                    <h3>Study planner</h3>
+                    <ul>
+                        <li><a href="https://heoar.github.io/dothome21/refer-javascript/index.html">javascript</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-jquery/index.html">jquery</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/layout/index.html">layout</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-html/index.html">html</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-css/index.html">CSS</a></li>
+                    </ul>
+                </div>
+                <div class="refer_box">
+                    <h3>Site Reference</h3>
+                    <ul>
+                        <li><a href="https://heoar.github.io/dothome21/mega/index.html">Megabox</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/site/index.html">wireframe</a></li>
+                        <li><a href="http://bhar.dothome.co.kr/project/pages/index.php">project</a></li>
+                        <li><a href="http://mybhar.dothome.co.kr/site-php/pages/main.php">php</a></li>
+                    </ul>
+                </div>
+                <div class="refer_box">
+                    <h3>Effect</h3>
+                    <ul>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/mouseEffect/index.html">mouseEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/sliderEffect/index.html">sliderEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/parallexEffect/index.html">parallexEffect</a></li>
+                        <li><a href="https://heoar.github.io/dothome21/refer-effect/gameEffect/index.html">gameEffect</a></li>
+                    </ul>
+                </div>
+                <div class="refer_box">
+                    <h3>Figma organize</h3>
+                    <ul>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=358%3A29&node-id=358%3A35&scaling=min-zoom">javascript</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=134%3A161&node-id=134%3A162&scaling=min-zoom">jquery</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=70%3A400&node-id=70%3A413&scaling=min-zoom">mysql</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=75%3A1545&node-id=75%3A1549&scaling=min-zoom">scss</a></li>
+                        <li><a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=411%3A49&node-id=433%3A70&scaling=min-zoom">react</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer_bg">
+            <div class="footer_img">
+                <span>CONTACT</span>
+                <p>yuooo13@gmail.com</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
